apps/infra/db.yaml
apiVersion: v1
kind: Service
metadata:
  name: infra-db
  namespace: infra
spec:
  ports:
    - port: 5432
  selector:
    app: infra-db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-db
  namespace: infra
  labels:
    app: infra-db
spec:
  selector:
    matchLabels:
      app: infra-db
  template:
    metadata:
      labels:
        app: infra-db
    spec:
      containers:
        - image: postgres:17
          name: postgresql
          ports:
            - containerPort: 5432
              name: postgresql
          livenessProbe:
            tcpSocket:
              port: postgresql
          readinessProbe:
            tcpSocket:
              port: postgresql
          startupProbe:
            tcpSocket:
              port: postgresql
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 64Mi
