apps/infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: local-ca-issuer
  name: infra
  namespace: infra
spec:
  ingressClassName: nginx
  rules:
  - host: infra.kubernetes.docker.internal
    http:
      paths:
      - backend:
          service:
            name: infra
            port:
              number: 8080
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - infra.kubernetes.docker.internal
    secretName: infra-tls
